--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
-    "makefile.extensionOutputFolder": "./.vscode",
     "files.associations": {
-        "socket.h": "c"
+        "pthread.h": "c",
+        "utils.h": "c"
     }
 }
