making ajusts, this commit is the submittable project

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "pthread.h": "c",
-        "utils.h": "c"
+        "utils.h": "c",
+        "signal.h": "c"
     }
 }
